# warmstart-entropy

./: .env  .gitignore  README.md  main.py  pyproject.toml
configs/: dapo.yaml  sft.yaml
scripts/: merge_and_upload.sh  process_gsm8k.py  run_dapo.sh  run_eval.sh  run_grpo.sh  run_sft.sh  upload_hf_checkpoints.py
scripts/preprocess/: dapo_math.py  math.py  openr1_sft.py
